--- a/PokerApp/Components/Pages/Poker/JoinTable.razor
+++ b/PokerApp/Components/Pages/Poker/JoinTable.razor
@@ -59,12 +59,12 @@
             }
             else
             {
-                NavigationManager.NavigateTo("/Identity/Account/Login", true);
+                NavigationManager.NavigateTo("/Account/Login", true);
             }
         }
         else
         {
-            NavigationManager.NavigateTo("/Identity/Account/Login", true);
+            NavigationManager.NavigateTo("/Account/Login", true);
         }
     }
 
