--- a/PokerApp/Components/Shared/CardComponent.razor
+++ b/PokerApp/Components/Shared/CardComponent.razor
@@ -1,10 +1,10 @@
 
 @namespace PokerApp.Components.Shared
 
-<HeadContent>
+@*<HeadContent>
     <link href="css/poker-table.css" rel="stylesheet" />
     <link href="css/cards.css" rel="stylesheet" />
-</HeadContent>
+</HeadContent>*@
 
 <div class="playing-card @(Visible ? "visible" : "hidden")"
      title="@(Visible ? CardModel.ToString() : "Card")">
