--- a/PokerApp/Components/Shared/PokerTableComponent.razor
+++ b/PokerApp/Components/Shared/PokerTableComponent.razor
@@ -1,10 +1,11 @@
 
 @namespace PokerApp.Components.Shared
 
-<HeadContent>
+@*<HeadContent>
     <link href="css/poker-table.css" rel="stylesheet" />
     <link href="css/cards.css" rel="stylesheet" />
-</HeadContent>
+    <link href="css/history-feed.css" rel="stylesheet" />
+</HeadContent>*@
 
 <div class="poker-table">
     @for (int i = 1; i <= 10; i++)
