--- a/PokerApp/Components/Account/Shared/RedirectToLogin.razor
+++ b/PokerApp/Components/Account/Shared/RedirectToLogin.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager NavigationManager
+﻿@namespace Microsoft.AspNetCore.Components.Routing
+@inject NavigationManager NavigationManager
 
 @code {
     protected override void OnInitialized()
@@ -6,12 +7,3 @@
         NavigationManager.NavigateTo($"Account/Login?returnUrl={Uri.EscapeDataString(NavigationManager.Uri)}", forceLoad: true);
     }
 }
-
-@* @inject NavigationManager Navigation
-
-@code {
-    protected override void OnInitialized()
-    {
-        Navigation.NavigateTo($"Identity/Account/Login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}", true);
-    }
-} *@
