--- a/PokerApp/Components/Layout/MainLayout.razor
+++ b/PokerApp/Components/Layout/MainLayout.razor
@@ -1,25 +1,32 @@
 @inherits LayoutComponentBase
-
 @using Microsoft.AspNetCore.Components.Web
 
 <PageTitle>Poker App</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
+    @*<div class="top-row">*@
+       
+    @*</div>*@
     <main>
         <div class="top-row px-4 auth">
-            <LoginDisplay />
+             <NavMenu />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+<script>
+    window.showToast = function() {
+        const toast = document.getElementById("copyToast");
+        toast.className = "copy-toast show";
+        setTimeout(function() { 
+            toast.className = "copy-toast"; 
+        }, 3000);
+    }
+</script>
 
 <style>
     .page {
@@ -27,77 +34,84 @@
         display: flex;
         flex-direction: column;
     }
-
     main {
         flex: 1;
     }
-
-    .sidebar {
+/*    .sidebar {
         background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-    }
-
+    }*/
     .top-row {
         background-color: #f7f7f7;
         border-bottom: 1px solid #d6d5d5;
+        background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
         justify-content: flex-end;
         height: 3.5rem;
         display: flex;
         align-items: center;
     }
-
     .top-row ::deep a, .top-row ::deep .btn-link {
         white-space: nowrap;
         margin-left: 1.5rem;
         text-decoration: none;
     }
-
     .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
         text-decoration: underline;
     }
-
     .top-row ::deep a:first-child {
         overflow: hidden;
         text-overflow: ellipsis;
     }
-
+    .copy-toast {
+        visibility: hidden;
+        min-width: 250px;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 16px;
+        position: fixed;
+        z-index: 1;
+        bottom: 30px;
+        right: 30px;
+        font-size: 16px;
+        opacity: 0;
+        transition: opacity 0.3s, visibility 0.3s;
+    }
+    .copy-toast.show {
+        visibility: visible;
+        opacity: 1;
+    }
     @@media (max-width: 640.98px) {
         .top-row:not(.auth) {
             display: none;
         }
-
         .top-row.auth {
             justify-content: space-between;
         }
-
         .top-row ::deep a, .top-row ::deep .btn-link {
             margin-left: 0;
         }
     }
-
     @@media (min-width: 641px) {
         .page {
             flex-direction: row;
         }
-
-        .sidebar {
+/*        .sidebar {
             width: 250px;
             height: 100vh;
             position: sticky;
             top: 0;
-        }
-
+        }*/
         .top-row {
             position: sticky;
             top: 0;
             z-index: 1;
         }
-
         .top-row.auth ::deep a:first-child {
             flex: 1;
             text-align: right;
             width: 0;
         }
-
         article {
             padding-left: 2rem !important;
             padding-right: 1.5rem !important;
