--- a/PokerApp/wwwroot/css/poker-table.css
+++ b/PokerApp/wwwroot/css/poker-table.css
@@ -597,3 +597,29 @@
         justify-content: center;
     }
 }
+
+.poker-room.with-history-feed {
+    margin-left: 300px;
+    transition: margin-left 0.3s ease-in-out;
+}
+
+
+
+@media ( max-width : 1200px ) {
+
+
+    .poker-room.with-history-feed {
+        margin-left: 250px;
+    }
+}
+
+
+
+@media ( max-width : 768px ) {
+
+
+    .poker-room.with-history-feed {
+        margin-left: 0;
+        margin-bottom: 200px;
+    }
+}
